feat: introduce storage configuration on reworked internal